--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  http: ^0.12.0+2
+  extended_text: ^0.6.6
+  carousel_pro: ^1.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
